--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,27 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.fa-facebook-f{
+    color: #fff;
+    font-size: 20px;
+
+}
+
+.fa-instagram{
+    color: #fff;
+    font-size: 20px;
+
+}
+
+.fa-linkedin-in{
+    color: #fff;
+    font-size: 20px;
+
+}
+
+.fa-youtube{
+    color: #fff;
+    font-size: 20px;
+
+}
